# Particle-Pipeline-Package

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: primer_example.py
particle_pipeline/: __init__.py  cli.py  estimation.py  io.py  morphometry.py  pipeline.py  refinement.py  segmentation.py  uncertainty.py
tests/: test_pipeline.py
